[gd_scene load_steps=6 format=3 uid="uid://cwq3n0prw0snx"]

[ext_resource type="Script" path="res://scripts/transitioner.gd" id="1_2vh1j"]
[ext_resource type="Script" path="res://scripts/truth_minigame.gd" id="1_4opux"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xn8eg"]
bg_color = Color(0.231373, 0.517647, 0.27451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wvghg"]
bg_color = Color(0.905882, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_co2dm"]
font_size = 32

[node name="Ministry of Truth" type="Node2D"]
script = ExtResource("1_4opux")

[node name="Minigame" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.658824, 0.627451, 0.501961, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="Minigame"]
clip_contents = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_right = 540.0
offset_bottom = 1080.0
grow_horizontal = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="TextContainer" type="HFlowContainer" parent="Minigame/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Rules" type="VBoxContainer" parent="Minigame/ScrollContainer/TextContainer"]
custom_minimum_size = Vector2(1080, 1080)
layout_mode = 2
theme_override_constants/separation = 100

[node name="RichTextLabel" type="RichTextLabel" parent="Minigame/ScrollContainer/TextContainer/Rules"]
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size=128][outline_color=white][outline_size=15][u]Truth Correction[/u][/outline_size][/outline_color][/font_size]

[font_size=48]Good morning comrade, we need you to go through this long text and correct the truth for us.
All incorrect words will be hightlighted in red.
Don't disappoint Big Brother.
[/font_size]
[/center]"
fit_content = true

[node name="StartButton" type="Button" parent="Minigame/ScrollContainer/TextContainer/Rules"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 96
theme_override_styles/normal = SubResource("StyleBoxFlat_xn8eg")
theme_override_styles/hover = SubResource("StyleBoxFlat_wvghg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xn8eg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xn8eg")
theme_override_styles/focus = SubResource("StyleBoxFlat_xn8eg")
text = "Start"

[node name="GameDetails" type="VBoxContainer" parent="Minigame"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 329.0
offset_bottom = 106.0

[node name="ScoreLabel" type="Label" parent="Minigame/GameDetails"]
layout_mode = 2
text = "Words Corrected:"
label_settings = SubResource("LabelSettings_co2dm")

[node name="ScoreValue" type="Label" parent="Minigame/GameDetails"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_co2dm")

[node name="Spacer" type="Control" parent="Minigame/GameDetails"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Transitioner" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_2vh1j")

[node name="Camera2D" type="Camera2D" parent="."]
